# redis-py-sansio

./: .gitignore  Readme.md  docker-compose.yml  pyproject.toml
.benchmarks/Darwin-CPython-3.8-64bit/: 0001_26bd4b2436a922043cd540bf515df98d10b48094_20220312_155118_uncommited-changes.json  0002_5852a3f4ffb6779669cc03c0244e51a203506047_20220314_153127_uncommited-changes.json  0003_ce3625501a31c940684bcf5c468b88ba22f6aeeb_20220314_153717.json  0004_ce3625501a31c940684bcf5c468b88ba22f6aeeb_20220314_153858_uncommited-changes.json  0005_ce3625501a31c940684bcf5c468b88ba22f6aeeb_20220314_154029_uncommited-changes.json
benchmark/: conftest.py  test_benchmarks.py
redis/client/: aio.py  base.py  sio.py
redis/io/: aio.py  base.py  sio.py
redis/sansio/: _parser.py  events.py  operator.py  protocol.py  reader.py  writer.py
redis/sansio/callbacks/: errors.py  generic.py
redis/sansio/callbacks/resp2/: __init__.py  acl.py  callbacks.py  cluster.py  geo.py  meta.py  module.py  pubsub.py  scan.py  sentinel.py  stream.py  zset.py
redis/sansio/commands/: base.py  normalize.py
redis/sansio/commands/core/: __init__.py  acl.py  bitfield.py  cluster.py  geo.py  hash.py  hyperlog.py  key.py  list.py  management.py  module.py  pubsub.py  scan.py  script.py  set.py  (+2 more)
sansredis/clients/: aio.py  base.py  sio.py
sansredis/io/: aio.py  base.py  sio.py
sansredis/sansio/: _parser.py  _reader.py  constants.py  events.py  exceptions.py  operator.py  protocol.py  types.py  writer.py
sansredis/sansio/callbacks/: errors.py  generic.py
sansredis/sansio/commands/: base.py  normalize.py
(+29 files in other folders)
